[gd_scene load_steps=4 format=2]

[ext_resource path="res://Engine/Debug/DebugMenu.gd" type="Script" id=1]
[ext_resource path="res://Engine/Fonts/FontQuestLittle.tres" type="DynamicFont" id=2]
[ext_resource path="res://Engine/Singletons/Save/GameSaver.tscn" type="PackedScene" id=3]

[node name="DebugMenu" type="Panel"]
modulate = Color( 1, 1, 1, 0.717647 )
margin_right = 119.0
margin_bottom = 82.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 1.09
margin_right = 113.0
margin_bottom = 73.09

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 112.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 16.0
margin_bottom = 19.0
text = "id:"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 94.0
margin_bottom = 24.0
max_value = 5.0
align = 1

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 112.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 112.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 2 )
text = "Load"

[node name="GameSaver" parent="." instance=ExtResource( 3 )]

